--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,4 @@
-* linguist-vendored=false
-* linguist-generated=false
-* linguist-detectable=true
 *.html.tmpl linguist-language=HTML
+* linguist-detectable
+go.mod -linguist-detectable
+go.sum -linguist-detectable
