.gitattributes: *.tmpl should be considered to be HTML

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,4 @@
-*.html.tmpl linguist-language=HTML
+*.tmpl linguist-language=HTML
 * linguist-detectable
 go.mod -linguist-detectable
 go.sum -linguist-detectable
