--- a/forged/.golangci.yaml
+++ b/forged/.golangci.yaml
@@ -16,6 +16,8 @@ linters:
     - varnamelen # tmp
     - funlen # tmp
     - lll
+    - mnd # tmp
+    - revive # tmp
 
 linters-settings:
   revive:
